--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,3 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Open+Sans&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Special+Elite&display=swap');
+
+/* Navbar Styles*/
+.navbar {
+  background-color: #2e7d32;
+  /* background-color: #4caf50; */
+  color: white;
+  padding: 10px 0;
+  height: 80px;
+
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.logo {
+  font-family: 'Lobster', cursive;
+  font-size: 36px;
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 20px;
+}
+
+.logo a {
+  text-decoration: none;
+  color: white;
+}
+
+.nav-links {
+  list-style: none;
+}
+
+.nav-links li {
+  display: inline;
+  margin-left: 20px;
+}
+
+.nav-links li a {
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s ease;
+}
+
+.nav-links li a:hover {
+  color: #a5d6a7; /* Light green */
+}
+
+.profile-button {
+  position: relative;
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 30px;
+}
+
+.profile {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  padding: 10px 20px;
+}
+
 .profile-dropdown {
   position: absolute;
+  background-color: #fff;
+  right: 0;
+  top: calc(100% + 20px);
+  padding: 10px;
+  z-index: 1000;
+  border: 1px solid #ddd;
+}
+
+
+
+.profile-dropdown.active {
+  display: block;
+}
+
+.profile-dropdown div {
+  color: black;
+  width: 300px;
+  border: none;
+  padding: 10px 20px;
+  font-size: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  list-style: none;
+}
+
+.profile-dropdown a {
+  text-decoration: none;
+  color: black;
+}
+
+
+
+.profile-dropdown div:hover {
+  background-color: #e0f7e0;
+}
+
+.profile-dropdown button {
+  padding: 10px;
+  width: 300px;
+  font-size: medium;
+  background-color: #fff;
+  border-radius: 5px;
+
+}
+
+.profile-dropdown button:hover {
+  background-color: #e0f7e0;
 }
