--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -1,108 +1,108 @@
 .buttons-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
 }
 
 .browse-button {
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    margin: 0 10px;
-    font-size: 1em;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 15px 30px;
+  margin: 0 10px;
+  font-size: 1em;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .browse-button a {
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
 }
 
 .browse-button:hover {
-    background-color: #45a049;
-    transform: translateY(-2px);
+  background-color: #45a049;
+  transform: translateY(-2px);
 }
 
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    /* background-color: #2e7d32; */
-    color: #333;
-    padding: 20px 0;
-    text-align: center;
-    border-top: 1px solid #ddd;
-    background-color: #f0f0f0;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  /* background-color: #2e7d32; */
+  color: #333;
+  padding: 20px 0;
+  text-align: center;
+  border-top: 1px solid #ddd;
+  background-color: #f0f0f0;
 }
 
 .footer .container {
-    max-width: 1200px;
-    margin: 0 auto;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .footer p {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .footer-links a {
-    color: #333;
-    text-decoration: none;
-    margin: 0 10px;
-    transition: color 0.3s ease;
+  color: #333;
+  text-decoration: none;
+  margin: 0 10px;
+  transition: color 0.3s ease;
 }
 
 .footer-links a:hover {
-    color: #a5d6a7;
+  text-decoration: underline;
 }
 
 .homepage-container {
-    display: flex;
-    height: calc(100vh - 60px);
-    margin-bottom: 20px;
+  display: flex;
+  height: calc(100vh - 60px);
+  margin-bottom: 20px;
 }
 
-.hero, .image-section {
-    flex: 1; /* take up equal space */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.hero,
+.image-section {
+  flex: 1; /* take up equal space */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .hero {
-    background-color: #e0f7e0;
-    padding: 20px;
-    text-align: center;
-    flex-direction: column;
-    display: flex;
-
+  background-color: #e0f7e0;
+  padding: 20px;
+  text-align: center;
+  flex-direction: column;
+  display: flex;
 }
 
 .hero h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
+  font-size: 2.5em;
+  margin-bottom: 10px;
 }
 
 .hero p {
-    font-size: 1.2em;
-    margin-bottom: 20px;
+  font-size: 1.2em;
+  margin-bottom: 20px;
 }
 
 .hero-buttons {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 .image-section {
-    background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
 
 .image-section img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
