--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -28,43 +28,14 @@
     transform: translateY(-2px);
 }
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    /* background-color: #2e7d32; */
-    color: #333;
-    padding: 20px 0;
-    text-align: center;
-    border-top: 1px solid #ddd;
-    background-color: #f0f0f0;
-}
 
-.footer .container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.footer p {
-    margin-bottom: 10px;
-}
-
-.footer-links a {
-    color: #333;
-    text-decoration: none;
-    margin: 0 10px;
-    transition: color 0.3s ease;
-}
-
-.footer-links a:hover {
-    color: #a5d6a7;
-}
 
 .homepage-container {
     display: flex;
     height: calc(100vh - 60px);
     margin-bottom: 20px;
+
+
 }
 
 .hero, .image-section {
@@ -80,6 +51,7 @@
     text-align: center;
     flex-direction: column;
     display: flex;
+    box-shadow: 2px 0 4px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -99,10 +71,75 @@
 }
 .image-section {
     background-color: #f0f0f0;
+    position: relative;
+    overflow: hidden;
+    box-shadow: -2px 0 4px rgba(0, 0, 0, 0.1);
 }
 
 .image-section img {
-    max-width: 100%;
-    max-height: 100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    /* border-radius: 70%; */
+    transition: opacity 0.5s ease;
+
+}
+
+
+.action {
+    color: #1976D2;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    color: #333;
+    padding: 20px;
+    text-align: center;
+    border-top: 1px solid #ddd;
+    background-color: #f0f0f0;
+}
+
+.footer-links {
+    display: inline-block;
+}
+
+
+.footer p {
+    margin-bottom: 10px;
+}
+
+.footer-links a {
+    color: #333;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+    text-decoration: underline;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-content p {
+    margin: 0;
+    font-size: 14px;
+    color: #333;
+}
+
+.footer-links p {
+    font-size: 20px;
+}
+
+.footer-links {
+    display: flex;
+    align-items: center;
+
 }
