--- a/react-vite/src/components/Images/UploadImage.css
+++ b/react-vite/src/components/Images/UploadImage.css
@@ -8,9 +8,9 @@
 
 .upload-form {
     margin-top: 10px;
-  }
+}
 
-  .custom-file-upload {
+.custom-file-upload {
     display: inline-block;
     padding: 10px 20px;
     cursor: pointer;
@@ -20,22 +20,25 @@
     font-size: 16px;
     margin-right: 10px;
     transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
-  }
+    margin-bottom: 10px;
+    width: 100%;
+    text-align: center;
+}
 
-  .custom-file-upload:hover {
+.custom-file-upload:hover {
     background-color: #e9e9e9;
     border-color: #999;
     color: #000;
-  }
+}
 
-  .custom-file-upload input[type="file"] {
+.custom-file-upload input[type="file"] {
     display: none;
-  }
+}
 
-  .file-name {
+.file-name {
     font-size: 14px;
     color: #333;
-  }
+}
 
 .optional {
     color: grey;
