--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -2,11 +2,13 @@
 
 /* Navbar Styles*/
 .navbar {
-  background-color: #2e7d32;
-  /* background-color: #4caf50; */
+  /* background-color: #2e7d32; */
+  background-color: #4caf50;
+  /* background-color: #f0f0f0; */
   color: white;
   padding: 10px 0;
   height: 80px;
+  border-bottom: 1px solid #ddd;
 
 }
 
@@ -20,7 +22,8 @@
 .logo {
   font-family: 'Lobster', cursive;
   font-size: 36px;
-  color: white;
+  /* color: white; */
+  color: #4caf50;
   position: absolute;
   top: 0;
   left: 0;
@@ -29,6 +32,7 @@
 
 .logo a {
   text-decoration: none;
+  /* color: #4caf50; */
   color: white;
 }
 
