--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -1,4 +1,4 @@
-.buttons-section {
+/* .homepage-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,6 +9,7 @@
   background-color: #4caf50;
   color: white;
   border: none;
+  border: 2px solid 4caf50;
   padding: 15px 30px;
   margin: 0 10px;
   font-size: 1em;
@@ -35,12 +36,11 @@
     display: flex;
     height: calc(100vh - 60px);
     margin-bottom: 20px;
-
 }
 
 .hero,
 .image-section {
-  flex: 1; /* take up equal space */
+  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -70,6 +70,10 @@
 .hero-buttons {
   display: flex;
   gap: 10px;
+  justify-content: center;
+  margin-top: 40px;
+
+
 }
 .image-section {
 
@@ -84,7 +88,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* border-radius: 70%; */
+
     transition: opacity 0.5s ease;
 
 }
@@ -145,4 +149,139 @@
     display: flex;
     align-items: center;
 
+} */
+
+
+
+
+
+
+
+
+/* New Home page CSS */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+
+.home-page {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+
+
+}
+
+.homepage-header {
+  position: relative;
+  background-image: url('/homepage_image.jpg'); /* Add your image path here */
+  background-size: cover;
+  background-position: center;
+  height: 800px; /* Adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+.homepage-header h1 {
+  margin: 0;
+  font-size: 5rem;
+  color: white;
+  background-color: #4caf50;
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 3em;
+  font-weight: bold;
+  /* color: #ffffff;
+  background-color: rgba(0, 128, 0, 0.8); */
+  padding: 20px 40px;
+  border-radius: 10px;
+}
+
+
+
+
+.homepage-header p {
+  font-size: 1.2rem;
+  color: black;
+  margin-top: 20px;
+  background-color: #4caf50;
+  color: white;
+  /* color: #ffffff;
+  background-color: rgba(0, 128, 0, 0.8); */
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+
+}
+
+.homepage-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.browse-button {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border: 2px solid 4caf50;
+  padding: 15px 30px;
+  margin: 0 10px;
+  font-size: 1em;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  margin-top: 100px;
+}
+
+.browse-button a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+}
+
+.browse-button:hover {
+  background-color: #45a049;
+  transform: translateY(-2px);
+}
+
+
+.homepage-section {
+  padding: 20px;
+  margin: 10px;
+  border-radius: 5px;
+
+}
+
+.homepage-section h2 {
+  border-bottom: 2px solid #4caf50; /* Green color */
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+#features ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+#features li {
+  margin-bottom: 10px;
+}
+
+
+.footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #333;
+  color: white;
+}
+
+#get-involved {
+  margin-bottom: 100px;
 }
